# incidentflow-mcp

./: .dockerignore  .env.example  .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  _test_mcp.py  api-reference.mdx  authentication.mdx  chatgpt-app-submission.json  docker-compose.yml  docs.json  index.mdx  install.sh  mcp-tools.mdx  mintlify-local.mdx  openapi.json  pyproject.toml  quickstart.mdx
api-docs/: auth.mdx  errors.mdx  health.mdx  index.mdx  mcp-transport.mdx
docs/: integration-status-tools-and-metrics.md  logging.md  observability.md  tool-response-contracts.md
fern/: docs.yml  fern.config.json  generators.yml
openapi/: openapi.yaml
scripts/: generate_openapi.py  generate_tool_schemas.py  validate_openapi.py
tests/: conftest.py  test_argocd_platform_client.py  test_argocd_registration.py  test_argocd_tools.py  test_async_orchestration.py  test_auth.py  test_cli_logging.py  test_correlate_alerts.py  test_docs_tools.py  test_grafana_platform_client.py  test_grafana_registration.py  test_grafana_tools.py  test_health.py  test_incident_summary.py  test_install_sh.py  test_integration_status_tools.py  test_knowledge_search_tools.py  test_knowledge_tools.py  test_logging_config.py  test_mcp_routing.py  test_memory_tools.py  test_oauth_metadata.py  test_observability_metrics.py  test_openai_domain_verification.py  test_platform_slack_client.py  test_pod_sanitizer.py  test_rate_limit_identity_policy.py  test_rate_limiting.py  test_redis_store_fail_open.py  test_slack_alert_threads.py  (+5 more)
(+153 files in other folders)
